# hf-general-ci-tools

./: .cspell.json  .gitignore  .markdown-link-check.json  .markdownlint-rules.md  .markdownlint.json  .yamllint  404.html  CONTRIBUTING.md  DOCUMENTATION_IMPROVEMENTS.md  Doxyfile  Gemfile  README.md  VERSION_DETECTION_FIXES.md  _config.yml  build.yml  fixed-version-detection.sh  index.html  pyproject.toml  robots.txt  test-version-detection.sh  version_selector.html
_config/: .clang-format  .clang-tidy  .yamllint  Doxyfile  _config.yml  _config.yml.backup
_data/: navigation.yml
_site/: 404.html  feed.xml  sitemap.xml
cpp-ci-test/: .gitignore  CMakeLists.txt  README.md
cpp-ci-test/include/: geometry.h  greeter.hpp
cpp-ci-test/src/: geometry.c  greeter.cpp
development/: CONTRIBUTING.md  feed.xml  index.html  robots.txt  sitemap.xml  version_info.json
docs/: 404.html  Gemfile  Gemfile.example  README-API-Injection.md  _config.yml  _config.yml.example  _config_dev.yml  _config_prod.yml  api-injection-example.yml  api-link-injection-guide.md  c-cpp-lint-workflow.md  c-cpp-static-analysis-workflow.md  ci-workflows.md  configuration-examples.md  custom-themes.md  docs-link-check-workflow.md  docs-workflow.md  example-versioned-workflow.yml  example-workflows.md  examples-guides.md  guides.md  index.md  inject-api-links-simple.sh  inject-api-links.sh  jekyll-guide.md  link-check-workflow.md  lint-workflow.md  lychee.toml.example  mermaid-examples.md  minimal-example.md  quick-start.md  repository-info.md  reusable-workflows.md  ru-cpp-analysis.md  ru-cpp-lint.md  (+10 more)
(+423 files in other folders)
